# one_billion_rows

./: .gitignore  README.md  pyproject.toml
src/: create_data.py  using_duckdb.py  using_pandas.py  using_polars.py  using_python.py
